# cckit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: cckitConfig.cmake.in  cckitConfigVersion.cmake.in
docs/: Api.md  BasicUsage.md  Design.md
libs/fs/: CMakeLists.txt
libs/fs/include/cckit/: version.h
libs/fs/include/cckit/fs/: fs.h  fs.hpp
libs/fs/include/cckit/fs/capi/: fs.h
libs/fs/src/: fs.cpp
libs/fs/test/: CMakeLists.txt  README.md  test_fs_basic.cpp  test_fs_performance.cpp
libs/geo/: CMakeLists.txt  cckit-geo-config.cmake.in
libs/geo/include/cckit/: export.h  version.h
libs/geo/include/cckit/geo/: Geo.hpp
libs/geo/include/cckit/geo/capi/: cartesian3.h  cartographic.h  ellipsoid.h  geo.h  geo_math.h
libs/geo/include/cckit/geo/types/: Cartesian3.hpp  Cartographic.hpp
libs/geo/src/: Geo.cpp
libs/geo/test/: test_cartesian3.cpp  test_cartographic.cpp  test_main.cpp
libs/logging/: CMakeLists.txt  README.md
libs/logging/docs/: DEPENDENCY_STRATEGY.md  EXAMPLES.md  QUICK_REFERENCE.md
libs/logging/include/cckit/: export.h
libs/logging/include/cckit/logging/: Logging.hpp  log.h  log.hpp
libs/logging/include/cckit/logging/capi/: logging.h
libs/logging/src/: Logging.cpp  log.cpp
libs/logging/test/: CMakeLists.txt  README.md  test_callback_thread_safety.cpp  test_deadlock_prevention.cpp  test_logging_use_after_free.cpp
libs/math/: CMakeLists.txt
libs/math/include/cckit/math/: Constants.hpp  Math.hpp  MathConfig.h  Tolerance.hpp  Utils.hpp
libs/math/include/cckit/math/capi/: mat3.h  mat4.h  quat.h  types.h  vec2.h  vec3.h  vec4.h
libs/math/include/cckit/math/exts/: QuatExt.hpp
libs/math/include/cckit/math/types/: Mat.hpp  Mat3.hpp  Mat4.hpp  Quat.hpp  Vec.hpp  Vec2.hpp  Vec2Array.hpp  Vec3.hpp  Vec3Array.hpp  Vec4.hpp  Vec4Array.hpp  VecArray.hpp
libs/math/src/: Mat3.cpp  Mat4.cpp  Quat.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp
libs/math/test/: CMakeLists.txt  test_math_basic.cpp  test_math_performance.cpp
libs/random/: CMakeLists.txt
libs/random/include/cckit/random/: Random.hpp  RandomCompat.hpp  RandomConfig.h
libs/random/include/cckit/random/capi/: rng.h  types.h
libs/random/include/cckit/random/types/: RandomGenerator.hpp
libs/random/src/: Random.cpp
libs/random/test/: .gitignore  CMakeLists.txt  test_compat.cpp  test_distributions.cpp  test_main.cpp  test_random_generator.cpp  test_weighted.cpp
libs/runtime/: CMakeLists.txt  README.md
libs/runtime/cmake/: cckit-runtime-config.cmake.in
libs/runtime/include/cckit/: version.h
libs/runtime/include/cckit/runtime/: Runtime.hpp
libs/runtime/include/cckit/runtime/capi/: runtime.h
libs/runtime/src/: Runtime.cpp
libs/runtime/test/: .gitignore  CMakeLists.txt  README.md  test_directory.cpp  test_environment.cpp  test_path.cpp  test_process.cpp  test_system.cpp  test_time.cpp
libs/string/: CMakeLists.txt
libs/string/include/cckit/string/: String.hpp  string.h  string.hpp
libs/string/include/cckit/string/capi/: string.h
libs/string/src/: String.cpp  string.cpp
libs/string/test/: CMakeLists.txt  test_string_basic.cpp  test_string_performance.cpp
libs/uuid/: CMakeLists.txt
libs/uuid/include/cckit/uuid/: Uuid.hpp  uuid.h  uuid.hpp
libs/uuid/include/cckit/uuid/capi/: uuid.h
libs/uuid/src/: Uuid.cpp  uuid.cpp
libs/uuid/test/: CMakeLists.txt  README.md  test_uuid_basic.cpp  test_uuid_performance.cpp
vcpkg/: vcpkg-configuration.json
